--- a/EmployeeManagementSystem/EmployeeManagementSystem.csproj
+++ b/EmployeeManagementSystem/EmployeeManagementSystem.csproj
@@ -185,6 +185,7 @@
     <Content Include="Models\EmployeeModels.edmx.diagram">
       <DependentUpon>EmployeeModels.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
