--- a/EmployeeManagementSystem.Tests/App.config
+++ b/EmployeeManagementSystem.Tests/App.config
@@ -4,13 +4,17 @@
     組態設定。
 -->
 <configuration>
-    <appSettings>
+  <appSettings>
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  </appSettings>
 
-    </appSettings>
-
-    <connectionStrings>
-
-    </connectionStrings>
+  <connectionStrings>
+    <add name="EmployeeEntities" connectionString="metadata=res://*/Models.EmployeeModels.csdl|res://*/Models.EmployeeModels.ssdl|res://*/Models.EmployeeModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Employee.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
