fixed unit test

--- a/EmployeeUnitTest/app.config
+++ b/EmployeeUnitTest/app.config
@@ -21,7 +21,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="EmployeeEntities" connectionString="metadata=res://*/Models.EmployeeModels.csdl|res://*/Models.EmployeeModels.ssdl|res://*/Models.EmployeeModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Employee.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EmployeeEntities" connectionString="metadata=res://*/Models.EmployeeModels.csdl|res://*/Models.EmployeeModels.ssdl|res://*/Models.EmployeeModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\kaiti\source\repos\EmployeeManagementSystem\EmployeeManagementSystem\App_Data\Employee.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
